[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/enemy/spikeySawster/spikeySawster.gd" type="Script" id=1]
[ext_resource path="res://assets/objs/enemies/spikeySawster/saw.tres" type="ArrayMesh" id=2]
[ext_resource path="res://assets/objs/enemies/spikeySawster/face.tres" type="ArrayMesh" id=3]
[ext_resource path="res://assets/objs/enemies/spikeySawster/topCover.tres" type="ArrayMesh" id=4]
[ext_resource path="res://assets/objs/enemies/spikeySawster/bottomCover.tres" type="ArrayMesh" id=5]
[ext_resource path="res://src/enemy/0base/enemy.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape" id=1]
radius = 3.0
height = 2.0

[sub_resource type="Animation" id=5]
resource_name = "closeLid"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance2:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, -1.3, 0 ), Vector3( 0, -1.3, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1.3, 0 ), Vector3( 0, 1.3, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "spinHead"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance2:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 2.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance:translation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 1.6, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 1.3, 0 ), Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("head:rotation_degrees")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2.9 ),
"transitions": PoolRealArray( 0.307786, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 181, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CylinderShape" id=3]
radius = 2.83977
height = 1.27996

[sub_resource type="CylinderShape" id=2]
radius = 3.65371
height = 0.892129

[sub_resource type="SphereShape" id=6]
radius = 4.0

[node name="spikeySawster" instance=ExtResource( 6 )]
script = ExtResource( 1 )

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="meshFolder" parent="." index="1"]
transform = Transform( 0.965625, 0, 0, 0, 0.959375, 0, 0, 0, 1.03437, 0, 0, 0 )

[node name="idleAndDeath" parent="meshFolder" index="0"]
autoplay = ""
anims/closeLid = SubResource( 5 )
anims/spinHead = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="meshFolder" index="1"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 1.38743, 0 )
mesh = ExtResource( 5 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="meshFolder" index="2"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -1.38743, 0 )
mesh = ExtResource( 4 )
material/0 = null

[node name="head" type="MeshInstance" parent="meshFolder" index="3"]
mesh = ExtResource( 3 )
material/0 = null

[node name="MeshInstance5" type="MeshInstance" parent="meshFolder" index="4"]

[node name="everySecond" parent="." index="3"]
wait_time = 3.0

[node name="sawBlade" type="StaticBody" parent="." index="4"]

[node name="CollisionShape" type="CollisionShape" parent="sawBlade" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 0 )
shape = SubResource( 3 )

[node name="MeshInstance4" type="MeshInstance" parent="sawBlade" index="1"]
transform = Transform( 3, 0, 0, 0, 3, 0, 0, 0, 3, 7, 0, 0 )
mesh = ExtResource( 2 )
material/0 = null

[node name="Area" type="Area" parent="sawBlade" index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="CollisionShape2" type="CollisionShape" parent="sawBlade/Area" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0 )
shape = SubResource( 2 )

[node name="Tween" type="Tween" parent="." index="5"]

[node name="Tween2" type="Tween" parent="." index="6"]

[node name="damageArea" type="Area" parent="." index="7"]

[node name="CollisionShape" type="CollisionShape" parent="damageArea" index="0"]
shape = SubResource( 6 )
